--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <tr> 
 <td colspan="2">
 <div class="ab">
-  <h1> Пихта сибирская </h1> 
+  <h1> Кедр сибирский </h1> 
  Кедр сибирский - вечно зелёное дерево, которое относится к роду Сосна. В высоту кедр может достигать 44 метра, ствол старых деревьев в диаметре может достигать 2 метров. Продолжительность жизни кедра – около 500 лет. Хвоя дерева имеет тёмно-зелёный цвет, в длину может достигать 14 см. Растёт хвоя пучками, по пять хвоинок. Корень дерева короткий, стержневой, разветвляющийся.</div> <br> <br>
   <center> <img src="Кедр.jpg"> </center> <br> <br>
 <a href="https://sazhenets.github.io/">Назад на главную</a>
