--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-<title> Пихта сибирская</title>
+<title> Кедр сибирский</title>
 <link rel="stylesheet" href="css/2.css" type="text/css"> 
 </head>
 <body background="fon.jpg">
